app/assets/stylesheets/root.css.scss
html, body, div, header, nav, a, h1, h2,
ul, li, main, section, figure, img, p, form,
fieldset, label, input, textarea, button, i,
link, canvas {
  border: 0;
  margin: 0;
  padding: 0;
  font-size: 100%;
  font: inherit;
  text-align: inherit;
  vertical-align: baseline;
  color: inherit;
  text-decoration: inherit;
  background: transparent;
}

@viewport {
  width: device-width;
  zoom: 1;
}

$white: #fff;
$black: #000;
$primary-green: #83c441;
$primary-gray: #222;
$light-gray: #efefef;
$medium-gray: #ccc;
$button-gray: #3d3c3a;
$hover-blue: #0063dc;

body {
  font-family: sans-serif;
  font-size: 15px;
  background: $white;
  color: $primary-gray;
}

li {
  list-style: none;
}

.group:after {
  content: "";
  clear: both;
  display: block;
}

button:focus {
  outline: 0;
}

/* Header */

#header {
  background: $primary-green;
  height: 42px;
  line-height: 42px;
}

.header-nav {
  margin: 0 auto;
  width: 1032px;
  .header-logo {
    padding-right: 3px;
    float: left;
    font-weight: 600;
    font-size: 28px;
    text-transform: uppercase;
    img {
      max-height: 42px;
      max-width: 42px;
      float: right;
      margin: 0 3px;
    }
  }
  .header-logo:hover {
    color: $white
  }
  .header-nav-list {
    li {
      display: inline-block;
      padding: 0 10px;
    }
    li:hover {
      background: $primary-gray;
      color: $white;
    }
  }
}

/*/ Player /*/

#player-container {
  position: relative;
  display: block;
  background: $primary-gray;
  color: $white;
  height: 35px;
  width: 100%;
  line-height: 32px;
  vertical-align: middle;
}

#player-container.sticky {
  display: block;
  background: $primary-gray;
  color: $white;
  height: 35px;
  width: 100%;
  position: fixed;
  top: 0;
  z-index: 9999;
}

.player {
  width: 1038px;
  height: 35px;
  margin: 0 auto;
  .player-controls{
    display: block;
    float: left;
    width: 728px;
    height: inherit;
    li {
      display: inline-block;
    }
  }
  .side-menu {
    float: right;
  }
  .login-menu > li {
    float: left;
  }
}

/*/ NavControls /*/

.nav-controls {
  height: 35px;
  width: 120px;
  li {
    margin: 0px 5px;
    vertical-align: middle;
    font-size: 13px;
    width: 20px;
    button:hover {
      color: $hover-blue;
      cursor: pointer;
    }
  }
}

/*/ NavPlayer /*/

#current-track {
  height: 35px;
  margin-left: 10px;
  li {
    display: inline-block;
    margin-right: 7px;
    a:hover {
      text-decoration: underline;
      color: $hover-blue;
    }
  }
}

button {
  cursor: pointer;
  font-size: 14px;
  color: $white;
}

.player-button {
  margin: 0px 5px;
  border-radius: 2px;
  line-height: 14px;
  background-color: $button-gray;
  padding: 3px 4px 2px;
  border: 1px solid $medium-gray;
}

/*/ Side Menu /*/

#create-account {
  background-color: $primary-green;
  border: 1px solid $primary-green;
}

.profile-menu {
  background: $primary-gray;
  width: 80px;
  height: 35px;
  figure {
    display: inline-block;
    margin-left: 10px;
    img {
      border: 1px solid $medium-gray;
      max-height: 25px;
      max-width: 25px;
    }
  }
  .profile-list {
    border: 1px solid $primary-gray;
    display: none;
    position: absolute;
    top: 34px;
    li {
      background: $button-gray;
      padding-left: 10px;
      border-bottom: 1px solid $primary-gray;
      font-size: 12px;
      width: 80px;
    }
  }
}

.profile-menu:hover .profile-list {
  display: block;
}

#logout-button {
  font-size: 12px;
  margin-left: -2px;
}

/*/ Modal /*/

input {
  padding: 4px;
  border: 2px solid $medium-gray;
  border-radius: 3px;
  margin-bottom: 4px;
}

input:focus {
  box-shadow: 0 0 4px 2px $primary-green;
}

.login-form {
  height: 290px;
  width: 370px;
}

.signup-form {
  height: 392px;
  width: 340px;
}

.account-form {
  height: 250px;
  width: 360px;
}

.signup-p, .acc-p {
  font-size: 12px;
}

.acc-p {
  margin-top: 10px;
}

.form-header, {
  background: $primary-green;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid $black;
  padding-left: 10px;
  line-height: 36px;
}

label {
  display: block;
  font-weight: 600;
  font-size: 12px;
  margin: 10px 0;
}

.login-form > input {
  margin: 10px 0;
  display: block;
  background: #efefef;
  border: 1px solid #ccc;
  border-radius: 3px;
  font-size: 14px;
  line-height: 16px;
  color: #000;
}

.modal-button {
  border-radius: 3px;
  background: $medium-gray;
  border: 1px solid $primary-gray;
  font-size: 12px;
  color: #000;
  font-weight: 600;
  display: block;
  margin: 5px 0;
  padding-top: 2px;
}

/* Track Index */

.content {
  margin: 0 auto;
  width: 1032px;
  .playlist {
    width: 780px;
    h2 {
      font-size: 30px;
      margin: 25px 0px;
    }
    .playlist-menu {
      border-bottom: 1px solid $medium-gray;
      line-height: 35px;
      height: 35px;
      li {
        display: inline-block;
        margin-right: 15px;
      }
      li:hover {
        text-decoration: underline;
      }
    }
  }
}

.highlight {
  font-weight: 600;
  color: $primary-green;
  text-decoration: underline;
}

/* Track Index Item */

.track {
  display: flex;
  flex-direction: row;
  padding: 20px 0px;
  border-bottom: 1px solid $medium-gray;
  img {
    display: block;
    border: 1px solid $black;
    max-height: 150px;
    max-width: 150px;
    margin-right: 15px;
  }
  .track-detail-container {
    display: flex;
    flex-direction: column;
    width: 530px;
    .track-artist {
      font-size: 14px;
      color: $primary-gray;
    }
    .track-artist:hover {
      text-decoration: underline;
    }
    .track-name {
      font-size: 18px;
      color: $black;
    }
    .track-post {
      color: $hover-blue;
      font-size: 12px;
      margin: 5px 0px;
      .track-post-count {
        margin: 5px 0px;
      }
      .track-blog-name:hover {
        text-decoration: underline;
      }
      .follow, .unfollow {
        background: transparent;
        color: $hover-blue;
        font-weight: 500;
      }
      .follow:hover, .unfollow:hover {
        text-decoration: none;
        color: $white;
        background-color: $hover-blue;
        border-radius: 5px;
      }
      .track-post-info {
        color: $black;
        word-wrap: break-word;
        a {
          color: $hover-blue;
        }
        a:hover {
          text-decoration: underline;
        }
      }
    }
  }
  .fav-div {
    width: 70px;
    height: 30px;
    color: $medium-gray;
    display: flex;
    background: transparent;
    justify-content: space-between;
    p {
      margin-top: 5px;
      font-size: 14px;
    }
    button {
      font-size: 24px;
      line-height: 24px;
      color: $medium-gray;
    }
    button:hover {
      color: $hover-blue;
    }
    .fav-modal {
      padding-right: 7px;
    }
  }
}

#favorite {
  color: $medium-gray;
}

#unfavorite {
  color: red;
}

#play-button, #pause-button {
  color: $button-gray;
}

.follow, .unfollow {
  font-size: 12px;
  .follow-text {
    color: transparent;
  }
}

.follow:hover .follow-text, .unfollow:hover .follow-text {
  color: $white;
}

/*/ Profile /*/

.profile-header {
  width: 780px;
  height: 150px;
  margin: 20px 0px;
  display: flex;
  color: $black;
  .profile-image {
    margin-right: 20px;
    img {
      border: 1px solid $black;
      max-height: 150px;
      max-width: 150px;
    }
  }
  h1 {
    font-size: 28px;
    font-weight: bold;
  }
  .profile-info {
    width: 600px;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    li {
      width: 100px;
      height: 50px;
      border: 1px solid $black;
      margin-left: 20px;
      text-align: center;
      font-size: 20px;
      font-weight: bold;
      padding: 5px 0px;
    }
  }
}

#blog-url {
  color: $hover-blue;
  font-weight: 600px;
}

.blog-text {
  font-size: 12px;
  font-weight: normal;
}

.twitter {
  max-width: 25px;
  max-height: 25px;
}

#loader {
  display: block;
  margin: 0 auto;
}

// wavesurfer

.wave {
  width: 620px;
  height: 50px;
  margin-left: 45px;
}

.wave > wave {
  margin-top: 10px;
  height: 70px !important;
}

.wave > wave > canvas, .wave > wave > wave {
  top: -30px !important;
}

.show {
  width: 620px;
  height: 50px;
  margin-top: 10px;
}

.show > wave {
  height: 50px !important;
}

wave {
  cursor: pointer;
}

